Belajar GIT greget

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<h1>Belajar GIT</h1>
+		<p>Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....Ini adalah revisinya yah....</p>
 			<h2>Sub belajar GIT</h2>
 				<h3>Bagan belajar GIT</h3>
 	</body>
