Belajar GIT remote repository

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 		<h1>Belajar GIT</h1>
 			<h2>Sub belajar GIT</h2>
 				<h3>Bagan belajar GIT</h3>
+				<p>Belajar Git Repository remote</p>
 	</body>
 </html>
